--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,10 @@ default: &default
 development:
   <<: *default
   database: backend_development
-
+  username: pasatino # Configuro l'username
+  password: root # Configuro la password
+  host: localhost
+   
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
