--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-italia": "^2.10.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
