--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -22,6 +22,9 @@ gem "jbuilder"
 #le mie gemme
 gem 'rack-cors'
 
+gem 'bcrypt'
+gem 'jwt'
+
 # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
 # gem "kredis"
 
